[gd_scene load_steps=9 format=3 uid="uid://bl47lgp28h55u"]

[ext_resource type="PackedScene" uid="uid://c7im3tlim543v" path="res://models/clock.blend" id="1_bde08"]
[ext_resource type="Script" path="res://scripts/clock.gd" id="1_vtncq"]
[ext_resource type="AudioStream" uid="uid://dy00hf6qvxoct" path="res://audio/clock_tick.mp3" id="2_0vlfl"]
[ext_resource type="AudioStream" uid="uid://bbd2jdbgmr0yu" path="res://audio/clock_chime.mp3" id="4_3pafu"]

[sub_resource type="Animation" id="Animation_ny55h"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Cylinder:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Cylinder:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Cylinder:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio/TickTock:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Audio/TimeUp:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5gylt"]
resource_name = "tick_tock"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/Cylinder:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Model/Cylinder:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.4, -0.25, 0, 0.6, 0, 0.4, -0.6, 0, 0.6, 0, -0.4, -0.6, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Model/Cylinder:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio/TickTock:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_3smku"]
resource_name = "time_up"
length = 60.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Audio/TimeUp:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(22.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"call_enemy_manager"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxkoa"]
_data = {
"RESET": SubResource("Animation_ny55h"),
"tick_tock": SubResource("Animation_5gylt"),
"time_up": SubResource("Animation_3smku")
}

[node name="Clock" type="Node3D"]
script = ExtResource("1_vtncq")

[node name="Model" parent="." instance=ExtResource("1_bde08")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cxkoa")
}
autoplay = "tick_tock"

[node name="Audio" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.09871)

[node name="TickTock" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("2_0vlfl")

[node name="TimeUp" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("4_3pafu")

[node name="GracePeriod" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[connection signal="timeout" from="GracePeriod" to="." method="_on_grace_period_timeout"]

[editable path="Model"]
